# slimgest

./: .dockerignore  .gitignore  ARCHITECTURE_DIAGRAM.txt  BENCHMARKING.md  CHANGES_SUMMARY.md  CLIENT_BATCH_PROCESSING.md  CPU_TRACKING_FIX.md  DOCKER_FIX_SUMMARY.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MONITORING.md  MONITORING_FIXES.md  MULTI_DEVICE_UPDATE_SUMMARY.md  Makefile  PROJECT_COMPLETION_REPORT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_BATCH_PROCESSING.md  REFACTORING_SUMMARY.md  STAGE_ANNOTATIONS.md  TWO_PHASE_PROCESSING.md  VERIFICATION_CHECKLIST.md  WORKFLOW_DIAGRAM.txt  config.yaml  docker-compose.yml  dowload_dpsk_ocr_hf_model.py  pyproject.toml  test_monitoring.py
.github/workflows/: docker-build.yml  publish-wheel.yml
examples/: batch_processing_example.py  benchmark_results.json  benchmark_servers.py  example_client.py  test_servers.py  zero_io_example.py
helm/: README.md
helm/slim-gest/: Chart.yaml  values.yaml
helm/slim-gest/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
scripts/: benchmark.sh  nemotron_page_elements_v3_test.py  nemotron_table_structure_v1_test.py  pdf_render_example.py  render_bbox_images.py  start_web_service.py  verify_async_refactor.py
src/slimgest/: __init__.py  __main__.py  api.py  build_info.py
src/slimgest/benchmark/: __main__.py  _io.py  _sysinfo.py  hf_ocr.py
src/slimgest/cicd/: __main__.py  prepare_rc.py
src/slimgest/cli/: __main__.py  client.py  config.py  deepseek_ocr.py  local.py
src/slimgest/image/: __init__.py  __main__.py  render.py
src/slimgest/local/: __main__.py  analyze_metrics.py  in_memory.py  multi_gpu.py  pipeline_utils.py  simple.py  simple_all_gpu.py
src/slimgest/model/: model.py
src/slimgest/pdf/: README.md  __init__.py  __main__.py  convert.py  extract.py  render.py  tensor_ops.py
src/slimgest/ray/: __main__.py  ray_data.py
src/slimgest/recall/: __main__.py  topk.py
web_rust/: Cargo.toml  README.md  build.rs
web_rust/src/: handlers.rs  lib.rs  main.rs  models.rs  python_bridge.rs
(+46 files in other folders)
