[package]
name = "slimgest-web-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "slimgest_web_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "slimgest-web-rust"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bytes handling
bytes = "1.0"

# Python bindings
pyo3 = { version = "0.21", features = ["auto-initialize"] }

# Async utilities
futures = "0.3"
async-stream = "0.3"

# Multipart form handling
multer = "3.0"

# Temporary files
tempfile = "3.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["multipart"] }
